[metadata]
name = lecida-sriracha
description = Lecida Python Utilities
url = https://github.com/lecida/learn/sriracha
author = Michael Xie, Ilaï Deutel
maintainer = Ilaï Deutel
maintainer_email = ilai@lecida.com

[options]
setup_requires =
    setuptools_scm
install_requires =
    awscli>=1.16
    boto3>=1.9
    botocore>=1.12.5
    click>=6.7
    numpy>=1.11
    pandas>=0.23
    circleci>=1.2.2
    typing_extensions>=3.7.2

[options.entry_points]
console_scripts =
    sriracha = sriracha.main:cli

[options.packages.find]
exclude =
    tests*

[options.package_data]
sriracha =
    py.typed

[tool:pytest]
addopts = --strict
log_cli = true
log_cli_level = ERROR

[flake8]
select = A,B,C,E,F,I,N,S,W

import-order-style = pycharm
application-import-names = sriracha

copyright-check = True
copyright-author = Lecida Inc

# max-complexity=10

# S404: subprocess is imported
# W503: Line break before binary operator
ignore = S404,W503
per-file-ignores =
    # Asserts are allowed in tests, as well as uses of subprocesses
    tests/test_*.py: S101,S603
    # No copyright notice in _version.py (auto generated)
    _version.py: C801

[mypy]
ignore_missing_imports = true
strict_equality = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
show_error_codes = true

[pydocstyle]
convention = google
match = (?!test_)(?!_version).*\.py
# No need for docstring when you have Sanic OpenAPI decorators
match_dir = (?!blueprints).*
ignore_decorators = overload

[tool:isort]
order_by_type = false
case_sensitive = true
combine_as_imports = true
